# cc_weather_api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  kind-config.yaml  main.py  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  sync-uv-lock.yml
alembic/: env.py
alembic/versions/: 06aba4cc989b_add_cascade_delete_to_measurement_.py  16b356dcab6d_add_unique_constraint_for_measurement_.py  d66a43b0fead_create_initial_tables.py
db/: sample_dump.sql
k8s/base/: daily-forecast-cronjob.yaml  deployment.yaml  hourly-ingest-cronjob.yaml  kustomization.yaml  postgres-service.yaml  postgres-statefulset.yaml  service.yaml
k8s/example/: secret.example.yaml
k8s/overlays/dev/: kustomization.yaml  postgres-service-nodeport.yaml  service-nodeport.yaml
k8s/overlays/prod/: kustomization.yaml
secret/: .env.example  kustomization.yaml
src/: app.py  config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  logging_config.py  security.py
src/load_data/: backfill.py  client.py  daily_forecast_ingest.py  hourly_ingest.py  initial_load.py  offline_load.py  parser.py
src/models/: __init__.py  location.py  measurement.py  metric.py  user.py
src/repositories/: location_repository.py  measurement_repository.py  metric_repository.py  user_repository.py
src/routes/: auth.py  health.py  locations.py  measurements.py  metrics.py
src/schemas/: auth.py  location.py  measurement.py  metric.py
src/scripts/: simulate_forecast_history.py
src/services/: auth_service.py  location_service.py  metric_validation.py
tests/integration/: conftest.py  seed.py  test_health.py  test_locations.py  test_locations_backfill.py  test_measurements.py  test_metric_validation_live.py  test_metrics.py  test_metrics_backfill.py
tests/integration/fixtures/: seed_data.json
tests/unit/: test_load_data_parser.py  test_location_service.py
