[project]
name = "cc-weather-api"
version = "0.8.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
    "python-multipart>=0.0.32",
    "openmeteo-requests>=1.7.5",
    "numpy>=2.4.6",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear (common bug patterns)
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
